update for deployment

--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -3,7 +3,7 @@
 <!--sign in page-->
 <div id="signin-container">
     <div id="login-img-container">
-        <img src="/images/signin.webp" alt="login-image" id="loginimg">
+        <img src="/images/signin.jpg" alt="login-image" id="loginimg">
     </div>
     <div id="login-form-container">
         <div class="container-border" class="center-align">
