--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -2,7 +2,7 @@
     <div class="container-fluid d-flex">
       <!--icon-->
       <a class="navbar-brand text-white">
-        <img src="/images/logo.png" alt="Bootstrap" width="50" height="50">
+        <img src="/images/logo.png" alt="habit tracker" width="50" height="50">
         Habit Tracker
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
