--- a/views/_add_item_form.ejs
+++ b/views/_add_item_form.ejs
@@ -8,7 +8,7 @@
         </div>
         
         <div class="modal-body">
-            <form action="/users/habit/create-habit" method="post" id="inputform">
+            <form action="/habit/create-habit" method="post" id="inputform">
                 <!--habit title-->
                 <label for="task" class="form-label">Enter Habit</label>
                 <div class="form-floating mb-3">
