--- a/views/_edit_habit.ejs
+++ b/views/_edit_habit.ejs
@@ -6,7 +6,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form action="users/habit/edit-habit/?id=<%= habit._id%>&user=<%=locals.user%>" id="editHabit" method="POST">
+                <form action="/habit/edit-habit/?id=<%= habit._id%>&user=<%=locals.user%>" id="editHabit" method="POST">
                     <!--edit title-->
                     <div class="mb-3">
                         <label class="form-label">Habit</label>
