--- a/views/_habits.ejs
+++ b/views/_habits.ejs
@@ -60,7 +60,7 @@
                         </a>
                       </li>
                       <li class="p-2">
-                        <a href="/users/habit/delete-habit/?id=<%=habit._id%>" style="text-decoration: none;">
+                        <a href="/habit/delete-habit/?id=<%=habit._id%>" style="text-decoration: none;">
                             <i class="fa-regular fa-trash-can fa-lg" style="color: rgb(241, 121, 109);"></i> Delete
                         </a>
                       </li>
